# Testgame

./: CMakeLists.txt  main.cpp  main.h  state.h  testgame.kdev4
.kdev4/: testgame.kdev4
renderer/: main.cpp  main.h  shader.cpp  shader.h
renderer/shapes/: float2D.h  quad.cpp  quad.h  triangle.cpp  triangle.h
shaders/: triangle.f.glsl  triangle.v.glsl
